--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -215,6 +215,7 @@
         rest.is_network = document.getElementById('is_network').checked;
         rest.r_id = "{{=request.vars.r_id}}";
         rest.town = document.getElementById('rest_town').value;
+        rest.network = document.getElementById('network_id').value;
 
         var DTO = {'rest': rest};
         var data = JSON.stringify(DTO);
