--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="form-group">
                         <label class="font-weight-bold">Тэги</label>
-                        <textarea class="form-control" id="rest_tag" rows='2' data-min-rows='2' type="text" placeholder="Доставка, фаст-фуд..."></textarea>
+                        <textarea class="form-control" id="rest_tags" rows='2' data-min-rows='2' type="text" placeholder="Доставка, фаст-фуд..."></textarea>
                     </div>
 
 
@@ -220,7 +220,7 @@
         rest.r_id = "{{=request.vars.r_id}}";
         rest.town = document.getElementById('rest_town').value;
         rest.network = document.getElementById('network_id').value;
-        rest.tags = document.getElementById('rest_tag').value;
+        rest.tags = document.getElementById('rest_tags').value;
 
         var DTO = {'rest': rest};
         var data = JSON.stringify(DTO);
