--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -143,7 +143,7 @@
                         <label class="font-weight-bold">Тэги</label>
 
                         <textarea class="form-control" name="menu_tags" placeholder="Завтрак, острое..." id="menu_tags"
-                                  type="text"></textarea>
+                                  type="text">{{=rest.tags}}</textarea>
                     </div>
 
 
