--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="form-group">
                         <label class="font-weight-bold">Тэги</label>
-                        <textarea class="form-control" id="rest_tags" rows='2' data-min-rows='2' type="text" placeholder="Доставка, фаст-фуд..."></textarea>
+                        <textarea class="form-control" id="rest_tags" rows='2' data-min-rows='2' type="text" placeholder="Доставка, фаст-фуд...">{{for tagg in rest.tags:}}{{=tagg}},{{pass}}</textarea>
                     </div>
 
 
@@ -143,7 +143,7 @@
                         <label class="font-weight-bold">Тэги</label>
 
                         <textarea class="form-control" name="menu_tags" placeholder="Завтрак, острое..." id="menu_tags"
-                                  type="text">{{=rest.tags}}</textarea>
+                                  type="text"></textarea>
                     </div>
 
 
