--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -65,8 +65,7 @@
                     <div class="form-group">
                         <label class="font-weight-bold">Тэги</label>
                         <textarea class="form-control" id="rest_tags" rows='2' data-min-rows='2' type="text"
-                                  placeholder="Доставка, фаст-фуд...">{{for tagg in rest.tags:}}{{=tagg}}
-                            ,{{pass}}</textarea>
+                                  placeholder="Доставка, фаст-фуд...">{{for tagg in rest.tags:}}{{=tagg}},{{pass}}</textarea>
                     </div>
 
 
