--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -311,7 +311,7 @@
         menu.type = $("#menu_type").find("option:selected").val();
         menu.name = document.getElementById('menu_name').value;
         menu.tags_id = document.getElementById('menu_tags_id').value;
-        menu.tags_name = document.getElementById('menu_tasgs').value;
+        menu.tags_name = document.getElementById('menu_tags').value;
 
         menu.comment = document.getElementById('comment').value;
         rest.is_network = document.getElementById('is_network').checked;
