--- a/web2py/applications/menuet/views/core/a_item.html
+++ b/web2py/applications/menuet/views/core/a_item.html
@@ -21,22 +21,28 @@
                     </div>
 
                     <div class="form-group input-group">
-                        <span class="input-group-addon"><i class="fas fa-balance-scale"></i> </span>
-                        <input type="number" id="item_weight" value="{{=item.weight}}" class="form-control"
-                               placeholder="Вес / Объем">
-
-                            <i class="fa fa-question-circle"
-                                                            data-toggle="tooltip"
-                                                            data-placement="right"
-                                                            title="Если вес неизвестен - оставьте 0"
-                                                            style="color:red">
-                    </i>
-                        <span class="input-group-addon"><select id="item_unit">
+                        <div class="row">
+                            <div class="col-sm-5 form-group input-group"><span class="input-group-addon"><i
+                                    class="fas fa-balance-scale"></i> </span>
+                                <input type="number" id="item_weight" value="{{=item.weight}}" class="form-control"
+                                       placeholder="Вес / Объем">
+                                <i class="fa fa-question-circle"
+                                   data-toggle="tooltip"
+                                   data-placement="right"
+                                   title="Если вес неизвестен - оставьте 0"
+                                   style="color:red">
+                                </i>
+                            </div>
+                            <div class="col-sm-5 form-group input-group">
+                            <span class="input-group-addon"><select id="item_unit">
                             <option value="1">Выберите</option>
-                        {{for opt in units:}}
-                            <option value="{{=opt.id}}">{{=opt.f_name}}, {{=opt.f_description}}</option>
-                        {{pass}}
-                        </select></span>
+                            {{for opt in units:}}
+                                <option value="{{=opt.id}}">{{=opt.f_name}}{{=opt.f_description}}</option>
+                            {{pass}}
+                        </select>
+                            </span>
+                            </div>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label class="font-weight-bold">Калории</label>
@@ -44,22 +50,19 @@
                     </div>
                     <form class="price_group" id="price_group_id">
                         <div class="form-group input-group">
+                                <span class="input-group-addon"><i class="fas fa-chart-pie"
+                                                               style="width: 20px;height: 16px"></i></span>
+                                <select id="portion_size0" name="portion_size" class="form-control">
+                                {{for portion in portions:}}
+                                    <option value="{{=portion.id}}">{{=portion.f_name}}</option>
+                                {{pass}}
+                                    <input type="number" id="item_price0" name="portion_price" value="{{=item.price}}"
+                                           class="form-control"
+                                           placeholder="Цена">
+                                    <div id="add_portion" class="form-group"></div>
 
-                            <span class="input-group-addon"><i class="fas fa-chart-pie"
-                                                               style="width: 20px;height: 16px"></i> </span>
-                            <select id="portion_size0" name="portion_size" class="form-control">
-                            {{for portion in portions:}}
-                                <option value="{{=portion.id}}">{{=portion.f_name}}</option>
-                            {{pass}}
-                                <input type="number" id="item_price0" name="portion_price" value="{{=item.price}}"
-                                       class="form-control"
-                                       placeholder="Цена">
-                                <div id="add_portion" class="form-group"></div>
-
-                            </select>
-
-                        </div>
-
+                                </select>
+                            </div>
                     </form>
                     <input class="btn btn-success form-control" id="addrow_id0" type="button"
                            value=" Еще одна порция "
@@ -77,7 +80,7 @@
                                                                                title="Ингридиенты будут авто-дополняться, если ингридиента нет - добавится новый"
                                                                                style="color:red">
                     </i>
-                        <textarea type="text" id="item_ingrs" class="form-control autoExpand " rows='3'
+                        <textarea type="text" id="item_ingrs" class="form-control autoExpand" rows='3'
                                   data-min-rows='3'></textarea>
                         <em class="text-muted">Спагетти, кальмары, мидии, помидоры</em>
                     </div>
@@ -90,7 +93,8 @@
                     </div>
                 </div>
                 <div class="card-footer">
-                    <input class="btn btn-primary" type="button" value="Добавить и закрыть" id="add_butt" onclick="save_item(1)">
+                    <input class="btn btn-primary" type="button" value="Добавить и закрыть" id="add_butt"
+                           onclick="save_item(1)">
                     <input class="btn btn-primary" type="button" value="Добавить!" id="add_butt" onclick="save_item(2)">
                 </div>
             </div>
@@ -265,11 +269,11 @@
             data: data,
             success: function (data) {
                 $('#suda').removeClass('has-danger');
-                if (flag===1)
-                window.location = '{{=URL('core', 'e_menu', vars=dict(m_id=request.vars.m_id,r_id=request.vars.r_id))}}';
+                if (flag === 1)
+                    window.location = '{{=URL('core', 'e_menu', vars=dict(m_id=request.vars.m_id,r_id=request.vars.r_id))}}';
                 else
                     window.location = '{{=URL('core', 'a_item',
-                vars=dict(m_id=request.vars.m_id,r_id=request.vars.r_id))}}' + '&t=' + item.tags_name
+                    vars=dict(m_id=request.vars.m_id,r_id=request.vars.r_id))}}' + '&t=' + item.tags_name
             },
             error: function (data) {
                 $('#suda').addClass('has-danger');
