--- a/web2py/applications/menuet/views/core/a_item.html
+++ b/web2py/applications/menuet/views/core/a_item.html
@@ -77,7 +77,7 @@
                         <label class="font-weight-bold">Ингридиенты</label> <i class="fa fa-question-circle"
                                                                                data-toggle="tooltip"
                                                                                data-placement="right"
-                                                                               title="Ингридиенты будут авто-дополняться, если ингридиента нет - добавится новый"
+                                                                               title="Ингридиенты будут авто-дополняться."
                                                                                style="color:red">
                     </i>
                         <textarea type="text" id="item_ingrs" class="form-control autoExpand" rows='3'
