--- a/web2py/applications/menuet/views/core/a_item.html
+++ b/web2py/applications/menuet/views/core/a_item.html
@@ -70,7 +70,7 @@
                     <div class="form-group">
                         <label class="font-weight-bold">Описание</label>
                         <textarea type="text" placeholder="{{=item.desc}}" id="item_desc"
-                                  class="form-control"></textarea>
+                                  class="form-control autoExpand"></textarea>
                         <em class="text-muted">Фирменная паста с креветками, кальмарами и мидиями в сливочном...</em>
                     </div>
                     <div class="form-group">
