--- a/web2py/applications/menuet/views/core/a_item.html
+++ b/web2py/applications/menuet/views/core/a_item.html
@@ -1,15 +1,10 @@
 {{extend "layout.html"}}
 
-<link rel="stylesheet" href="{{=URL('static', 'js/tags/tagify.css')}}">
-
-<script src="{{=URL('static', 'js/tags/tagify.js')}}"></script>
-<script src="{{=URL('static', 'js/tags/jQuery.tagify.js')}}"></script>
 
 <div class="container">
 {{if  not 'itm_id' in request.vars:}}
     <h1>Новый предмет в меню:<br><a
-            href="{{=URL('core', 'e_menu', vars=dict(m_id=request.vars.m_id,r_id=request.vars.r_id))}}">{{=item.menu_name}}</a>
-    </h1>
+            href="{{=URL('core', 'e_menu', vars=dict(m_id=request.vars.m_id,r_id=request.vars.r_id))}}">{{=item.menu_name}}</a>{{=item.menu_name}}</h1>
 {{else:}}
     <h1>Изменить предмет</h1>
 {{pass}}
@@ -92,8 +87,9 @@
                     </div>
                     <div class="form-group">
                         <label class="font-weight-bold">Тэги</label>
+
                         <textarea class="form-control " name="item_tags" placeholder="острое, от шеф-повара..."
-                                  id="item_tags" hidden
+                                  id="item_tags" rows='2' data-min-rows='2'
                                   type="text">{{if 't' in request.vars:}}{{for tagg in request.vars.t:}}{{=tagg}}{{pass}}{{pass}}</textarea>
                     </div>
                 </div>
@@ -164,27 +160,17 @@
 
     });
 
-    var input2 = document.querySelector('textarea[id=item_tags]'),
-            tagify2 = new Tagify(input2, {
-                duplicates: true,
-                callbacks: {
-                    add: onAddTag,
-                    remove: onRemoveTag
-                }
+    $("#item_tags").suggestions({
+        token: "bf69a05b6ce842dcd0cbc159648d19a8c49fdf33",
+        type: "I_TAGS",
+        count: 5,
+        onSelect: function (suggestion) {
+            $('#item_tags_id').val(function () {
+                return this.value + ',' + suggestion.id;
             });
-    tagify2.on('add', function (e) {
-        console.log(e, e.detail);
+
+        }
     });
-
-    // add tag callback
-    function onAddTag(e) {
-        console.log(e, e.detail);
-    }
-
-    // remove tag callback
-    function onRemoveTag(e) {
-        console.log(e, e.detail);
-    }
 
     $("#item_ingrs").suggestions({
         token: "bf69a05b6ce842dcd0cbc159648d19a8c49fdf33",
@@ -197,6 +183,7 @@
 
         }
     });
+
 
     function save_item(flag) {
         $("#add_butt")
